force-app/main/default/objects/OrderSummary/fields/IsExportedToAmware__c.field-meta.xml
<CustomField>
    <fullName>IsExportedToAmware__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to mark if Order Summary is exported to Amware.</description>
    <inlineHelpText>Exported to Amware</inlineHelpText>
    <label>Is Exported To Amware</label>
    <type>Checkbox</type>
</CustomField>