force-app/main/default/objects/OrderSummary/fields/IsExportedToPositive__c.field-meta.xml
<CustomField>
    <fullName>IsExportedToPositive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Exported To Positive</label>
    <type>Checkbox</type>
</CustomField>