force-app/main/default/objects/OrderSummary/fields/IsExportedToSAP__c.field-meta.xml
<CustomField>
    <fullName>IsExportedToSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to mark if Order Summary is exported to SAP(CPI)</description>
    <inlineHelpText>Exported to SAP(CPI)</inlineHelpText>
    <label>Is Exported To SAP</label>
    <type>Checkbox</type>
</CustomField>