force-app/main/default/objects/OrderSummary/fields/NumberOfPaymentTypes__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPaymentTypes__c</fullName>
    <description>It is a rollup summary field on the OrderPaymentSummary object for getting the total number of corresponding OrderPaymentSummary records</description>
    <inlineHelpText>Total number of Order Payment Summaries</inlineHelpText>
    <label>Number Of  PaymentTypes</label>
    <summaryForeignKey>OrderPaymentSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>