force-app/main/default/objects/OrderSummary/fields/PaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>PaymentAmount__c</fullName>
    <description>Sum of OrderPaymentSummary.CapturedAmount</description>
    <label>PaymentAmount</label>
    <summarizedField>OrderPaymentSummary.CapturedAmount</summarizedField>
    <summaryForeignKey>OrderPaymentSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>