force-app/main/default/objects/OrderSummary/fields/PF_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>PF_Order_ID__c</fullName>
    <description>Store the ID received from Positive services</description>
    <label>PF_Order_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>