force-app/main/default/objects/OrderSummary/fields/PickedupByRemorse__c.field-meta.xml
<CustomField>
    <fullName>PickedupByRemorse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pickedup by Remorse</label>
    <type>Checkbox</type>
</CustomField>