force-app/main/default/objects/OrderSummary/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>To count the no of API calls for particular order to Positive fulfillment</description>
    <label>Retry_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>