force-app/main/default/objects/OrderSummary/fields/sfcc_sourceChannel__c.field-meta.xml
<CustomField>
    <fullName>sfcc_sourceChannel__c</fullName>
    <description>ClientOrderType JSON Parameter , OMS receives this info from B2C (SFCC).</description>
    <label>SFCC Source Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>