force-app/main/default/objects/OrderSummary/fields/SFMC_Shipment_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Shipment_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Capturing Email sent status for shipment</description>
    <label>SFMC_Shipment_Email_Sent</label>
    <type>Checkbox</type>
</CustomField>